--- a/docker-compose-without-email-verification.yml
+++ b/docker-compose-without-email-verification.yml
@@ -1,12 +1,11 @@
 version: "3"
 services:
   chat:
-    image: io.github.igorramazanov/chat
+    image: com.github.igorramazanov/chat
     links:
     - redis
-    environment:
-    - REDIS_HOST=redis
     ports:
     - 8080:8080
+    command: -h redis
   redis:
     image: redis
