Fix wrong command in docker-compose

--- a/docker-compose-without-email-verification.yml
+++ b/docker-compose-without-email-verification.yml
@@ -6,6 +6,6 @@ services:
     - redis
     ports:
     - 8080:8080
-    command: -h redis
+    command: --redis-host redis
   redis:
     image: redis
