--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,10 +1,1 @@
-project {
-  git = true
-  excludeFilters = ["target/"]
-}
-style = default
-rewrite.rules = [PreferCurlyFors, RedundantBraces, SortImports]
-align = most
-maxColumn = 100
-version = 2.0.0-RC8
-docstrings = ScalaDoc
+version = 2.5.2
