Update ScalaFmt config

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,1 +1,11 @@
 version = 2.5.2
+align.preset = most
+assumeStandardLibraryStripMargin = true
+rewrite.rules = [AvoidInfix, 
+                 RedundantBraces, 
+                 RedundantParens, 
+                 SortModifiers, 
+                 PreferCurlyFors,
+                 SortImports]
+rewrite.redundantBraces.stringInterpolation = true
+newlines.afterCurlyLambda=squash
